--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../src/assets/css/index.min.css">
+    <script src="https://kit.fontawesome.com/413484d41e.js" crossorigin="anonymous"></script>
     <title>Kasa</title>
   </head>
   <body>
